--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -22,10 +22,12 @@ jobs:
         aws-region: us-west-2
     - name: Create Cluster
       run: |
+        curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
+        sudo mv /tmp/eksctl /usr/local/bin
         eksctl create cluster \
-        --name my-cluster \
-        --region us-west-2 \
-        --fargate
+               --name my-cluster \
+               --region us-west-2 \
+               --fargate
     - name: Deploy Niginx
       run: |
         # Create a namespace for your ingress resources
