--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -25,11 +25,11 @@ jobs:
         curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
         sudo mv /tmp/eksctl /usr/local/bin
         eksctl create cluster \
-               --name my-cluster \
+               --name "${{ github.event.inputs.clusterName }}" \
                --region us-west-2 \
-               --fargate
     - name: Deploy Niginx
       run: |
+        eksctl utils write-kubeconfig --cluster="${{ github.event.inputs.clusterName }}"
         # Create a namespace for your ingress resources
         kubectl create namespace ingress-basic
 
@@ -40,60 +40,54 @@ jobs:
         helm install nginx-ingress ingress-nginx/ingress-nginx \
             --namespace ingress-basic \
             --set controller.replicaCount=2 \
-            --set controller.nodeSelector."beta\.kubernetes\.io/os"=linux \
-            --set defaultBackend.nodeSelector."beta\.kubernetes\.io/os"=linux \
-            --set controller.admissionWebhooks.patch.nodeSelector."beta\.kubernetes\.io/os"=linux
         # Wait for ingress ip
         kubectl get service nginx-ingress-ingress-nginx-controller --namespace ingress-basic -w  \
-        -o 'go-template={{with .status.loadBalancer.ingress}}{{range .}}{{.ip}}{{"\n"}}{{end}}{{.err}}{{end}}' 2>/dev/null \
+        -o 'go-template={{(index .status.loadBalancer.ingress 0 ).hostname}}' 2>/dev/null \
         | head -n1
-#  build:
-#    needs: setup
-#    runs-on: ubuntu-latest
-#    strategy:
-#      max-parallel: 1
-#      matrix:
-#        payload: [50]
-#        users: [60]
-#    env:
-#      TEST_NAME: "test_passthrough"
-#      TEST_ROOT: "tests"
-#    steps:
-#    - uses: actions/checkout@v2
-#    - name: Login to DockerHub
-#      uses: docker/login-action@v1
-#      with:
-#        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-#        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-#    - name: Ballerina Build
-#      uses: ballerina-platform/ballerina-action@master # uses slbeta2
-#      env:
-#        CI_BUILD: true
-#        WORKING_DIR: tests/test_passthrough
-#      with:
-#        args:
-#          build
-#    - name: Docker push
-#      run: docker push ballerina/${TEST_NAME}:latest
-#    - name: Copy artifacts
-#      run: |
-#        ls -ltr
-#        cp -a ${TEST_ROOT}/${TEST_NAME}/target/kubernetes/${TEST_NAME}/. ${TEST_ROOT}/${TEST_NAME}/deployment/
-#    - name: 'Install Kustomize'
-#      run: |
-#        curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"  | bash
-#    - name: 'Run Kustomize'
-#      run: |
-#          kustomize build ${TEST_ROOT}/${TEST_NAME}/deployment > ${TEST_ROOT}/${TEST_NAME}/final.yaml
-#    - name: Configure AKS
-#      uses: azure/aks-set-context@v1
-#      with:
-#        creds: '${{ secrets.AZURE_CREDENTIALS }}'
-#        cluster-name: '${{ github.event.inputs.clusterName }}'
-#        resource-group: ${{ secrets.CLUSTER_RESOURCE_GROUP }}
-#    - name: Deploy artifacts
-#      run: |
-#        kubectl apply -f ${TEST_ROOT}/${TEST_NAME}/final.yaml
+        host=`kubectl get svc nginx-ingress-ingress-nginx-controller --namespace ingress-basic -o=go-template --template='{{(index .status.loadBalancer.ingress 0 ).hostname}}'`
+        IP=`kubectl get nodes | awk '{if (NR==2) {print $1}}'`
+        echo "Ingress IP: $IP"
+  build:
+    needs: setup
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 1
+      matrix:
+        payload: [50]
+        users: [60]
+    env:
+      TEST_NAME: "test_passthrough"
+      TEST_ROOT: "tests"
+    steps:
+    - uses: actions/checkout@v2
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    - name: Ballerina Build
+      uses: ballerina-platform/ballerina-action@master # uses slbeta2
+      env:
+        CI_BUILD: true
+        WORKING_DIR: tests/test_passthrough
+      with:
+        args:
+          build
+    - name: Docker push
+      run: docker push ballerina/${TEST_NAME}:latest
+    - name: Copy artifacts
+      run: |
+        ls -ltr
+        cp -a ${TEST_ROOT}/${TEST_NAME}/target/kubernetes/${TEST_NAME}/. ${TEST_ROOT}/${TEST_NAME}/deployment/
+    - name: 'Install Kustomize'
+      run: |
+        curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"  | bash
+    - name: 'Run Kustomize'
+      run: |
+          kustomize build ${TEST_ROOT}/${TEST_NAME}/deployment > ${TEST_ROOT}/${TEST_NAME}/final.yaml
+    - name: Deploy artifacts
+      run: |
+        kubectl apply -f ${TEST_ROOT}/${TEST_NAME}/final.yaml
 #    - name: Login via Az module
 #      uses: azure/login@v1
 #      with:
@@ -158,21 +152,22 @@ jobs:
 #          else
 #              echo "Disk is already deleted"
 #          fi
-  # cleanup:
-  #   needs: build
-  #   name: clean up
-  #   if: always()
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: AZURE LOGIN
-  #     uses: azure/login@v1
-  #     with:
-  #       creds: ${{secrets.AZURE_CREDENTIALS}}
-  #   - name: Cleaning up the cluster
-  #     if: always()
-  #     uses: azure/CLI@v1
-  #     with:
-  #       azcliversion: 2.0.72
-  #       inlineScript: |
-  #         az group delete --name mc_${{ secrets.CLUSTER_RESOURCE_GROUP }}_${{ github.event.inputs.clusterName }}_eastus -y
-  #         az aks delete --name ${{ github.event.inputs.clusterName }} --resource-group ${{ secrets.CLUSTER_RESOURCE_GROUP }} -y
+#  cleanup:
+#   needs: build
+#   name: clean up
+#   if: always()
+#   runs-on: ubuntu-latest
+#   steps:
+#   - name: Cleaning up the cluster
+#     if: always()
+#   - name: Configure AWS Credentials
+#     uses: aws-actions/configure-aws-credentials@v1
+#     with:
+#       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#       aws-region: us-west-2
+#   - name: Delete Cluster
+#     run: |
+#       curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
+#       sudo mv /tmp/eksctl /usr/local/bin
+#       eksctl delete cluster
