--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -9,7 +9,15 @@ on:
         required: false
 jobs:
   setup:
+    strategy:
+      max-parallel: 1
+      matrix:
+        payload: [ 50 ]
+        users: [ 60 ]
     runs-on: ubuntu-latest
+    env:
+      TEST_NAME: "test_passthrough"
+      TEST_ROOT: "tests"
     timeout-minutes: 600
     steps:
     - name: CHECKOUT
@@ -24,41 +32,27 @@ jobs:
       run: |
         curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
         sudo mv /tmp/eksctl /usr/local/bin
-        eksctl create cluster \
-               --name "${{ github.event.inputs.clusterName }}" \
-               --region us-west-2 \
+        #        eksctl create cluster \
+        #               --name "${{ github.event.inputs.clusterName }}" \
+        #               --region us-west-2 \
     - name: Deploy Niginx
       run: |
         eksctl utils write-kubeconfig --cluster="${{ github.event.inputs.clusterName }}"
         # Create a namespace for your ingress resources
-        kubectl create namespace ingress-basic
+        #kubectl create namespace ingress-basic
 
         # Add the ingress-nginx repository
-        helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+        #helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
 
         # Use Helm to deploy an NGINX ingress controller
-        helm install nginx-ingress ingress-nginx/ingress-nginx \
-            --namespace ingress-basic \
-            --set controller.replicaCount=2 \
+        #        helm install nginx-ingress ingress-nginx/ingress-nginx \
+        #            --namespace ingress-basic \
+        #            --set controller.replicaCount=2 \
         # Wait for ingress ip
-        kubectl get service nginx-ingress-ingress-nginx-controller --namespace ingress-basic -w  \
-        -o 'go-template={{(index .status.loadBalancer.ingress 0 ).hostname}}' 2>/dev/null \
-        | head -n1
+        sleep 60
         host=`kubectl get svc nginx-ingress-ingress-nginx-controller --namespace ingress-basic -o=go-template --template='{{(index .status.loadBalancer.ingress 0 ).hostname}}'`
         IP=`kubectl get nodes | awk '{if (NR==2) {print $1}}'`
         echo "Ingress IP: $IP"
-  build:
-    needs: setup
-    runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 1
-      matrix:
-        payload: [50]
-        users: [60]
-    env:
-      TEST_NAME: "test_passthrough"
-      TEST_ROOT: "tests"
-    steps:
     - uses: actions/checkout@v2
     - name: Login to DockerHub
       uses: docker/login-action@v1
