--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -39,20 +39,17 @@ jobs:
       run: |
         eksctl utils write-kubeconfig --cluster="${{ github.event.inputs.clusterName }}"
         # Create a namespace for your ingress resources
-        #kubectl create namespace ingress-basic
+        kubectl create namespace ingress-basic
 
         # Add the ingress-nginx repository
-        #helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+        helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
 
         # Use Helm to deploy an NGINX ingress controller
-        #        helm install nginx-ingress ingress-nginx/ingress-nginx \
-        #            --namespace ingress-basic \
-        #            --set controller.replicaCount=2 \
+        helm install nginx-ingress ingress-nginx/ingress-nginx \
+            --namespace ingress-basic \
+            --set controller.replicaCount=2 \
         # Wait for ingress ip
         sleep 60
-        host=`kubectl get svc nginx-ingress-ingress-nginx-controller --namespace ingress-basic -o=go-template --template='{{(index .status.loadBalancer.ingress 0 ).hostname}}'`
-        IP=`nslookup $host |  awk '{if (NR==6) {print $2}}'`
-        echo "Ingress IP: $IP"
     - uses: actions/checkout@v2
     - name: Login to DockerHub
       uses: docker/login-action@v1
@@ -82,21 +79,17 @@ jobs:
     - name: Deploy artifacts
       run: |
         kubectl apply -f ${TEST_ROOT}/${TEST_NAME}/final.yaml
-#    - name: Login via Az module
-#      uses: azure/login@v1
-#      with:
-#        creds: ${{secrets.AZURE_CREDENTIALS}}
-#    - name: Write values to outputs
-#      id: write
-#      run: |
-#        echo "::set-output name=cluster-ip::$(kubectl get service nginx-ingress-ingress-nginx-controller --namespace ingress-basic -w  \
-#                                              -o 'go-template={{with .status.loadBalancer.ingress}}{{range .}}{{.ip}}{{"\n"}}{{end}}{{.err}}{{end}}' 2>/dev/null \
-#                                              | head -n1)"
-#        echo "::set-output name=scenario-name::${TEST_NAME}"
-#        echo "::set-output name=vm-name::bal-perf-vm-`echo ${TEST_NAME} | tr '_' '-'`-${{ matrix.users }}-${{ matrix.payload }}-${{ GITHUB.RUN_NUMBER }}"
-#        echo "::set-output name=git-token::${{ secrets.BALLERINA_BOT_TOKEN }}"
-#        echo "::set-output name=custom-image-name::$(cat image.txt)"
-#        echo "::set-output name=ppg-id::/subscriptions/${{ secrets.SUBSCRIPTION_ID }}/resourceGroups/ballerina-performance/providers/Microsoft.Compute/proximityPlacementGroups/${{ secrets.PPG_NAME }}"
+    - name: Write values to outputs
+      id: write
+      run: |
+        host=`kubectl get svc nginx-ingress-ingress-nginx-controller --namespace ingress-basic -o=go-template --template='{{(index .status.loadBalancer.ingress 0 ).hostname}}'`
+        IP=`nslookup $host |  awk '{if (NR==6) {print $2}}'`
+        echo "Ingress IP: $IP"
+        echo "::set-output name=cluster-ip::$IP"
+        echo "::set-output name=scenario-name::${TEST_NAME}"
+        echo "::set-output name=vm-name::bal-perf-vm-`echo ${TEST_NAME} | tr '_' '-'`-${{ matrix.users }}-${{ matrix.payload }}-${{ GITHUB.RUN_NUMBER }}"
+        echo "::set-output name=git-token::${{ secrets.BALLERINA_BOT_TOKEN }}"
+        echo "::set-output name=custom-image-name::$(cat image.txt)"
 #    - name: Create VM Instance
 #      id: vminstance
 #      uses: azure/CLI@v1
