--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -32,9 +32,9 @@ jobs:
       run: |
         curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
         sudo mv /tmp/eksctl /usr/local/bin
-        #        eksctl create cluster \
-        #               --name "${{ github.event.inputs.clusterName }}" \
-        #               --region us-west-2 \
+        eksctl create cluster \
+          --name "${{ github.event.inputs.clusterName }}" \
+          --region us-west-2 \
     - name: Deploy Niginx
       run: |
         eksctl utils write-kubeconfig --cluster="${{ github.event.inputs.clusterName }}"
@@ -87,63 +87,23 @@ jobs:
         echo "Ingress IP: $IP"
         echo "::set-output name=cluster-ip::$IP"
         echo "::set-output name=scenario-name::${TEST_NAME}"
-        echo "::set-output name=vm-name::bal-perf-vm-`echo ${TEST_NAME} | tr '_' '-'`-${{ matrix.users }}-${{ matrix.payload }}-${{ GITHUB.RUN_NUMBER }}"
         echo "::set-output name=git-token::${{ secrets.BALLERINA_BOT_TOKEN }}"
-        echo "::set-output name=custom-image-name::$(cat image.txt)"
-#    - name: Create VM Instance
-#      id: vminstance
-#      uses: azure/CLI@v1
-#      with:
-#        azcliversion: 2.0.72
-#        inlineScript: |
-#          az vm create --resource-group "${{ secrets.CLUSTER_RESOURCE_GROUP }}"  --name "${{ steps.write.outputs.vm-name }}"  --admin-username "${{ secrets.VM_USER }}" --admin-password "${{ secrets.VM_PWD }}" --location  eastus \
-#          --image "mi_${{ steps.write.outputs.custom-image-name }}" --tags benchmark-number=${{ steps.write.outputs.vm-name }} --size Standard_F4s_v2 --ppg ${{ steps.write.outputs.ppg-id }}
-#          echo "::set-output name=ip-address::$(az vm show -d -g "${{ secrets.CLUSTER_RESOURCE_GROUP }}" -n "${{ steps.write.outputs.vm-name }}" --query publicIps -o tsv)"
-#    - name: Wait for VM instance
-#      run: sleep 60s
-#      shell: bash
-#    - name: Execute performance tests
-#      uses: appleboy/ssh-action@master
-#      env:
-#        IP: ${{ steps.write.outputs.cluster-ip }}
-#        SCENARIO_NAME: ${{ steps.write.outputs.scenario-name }}
-#        GITHUB_TOKEN: ${{steps.write.outputs.git-token}}
-#        PAYLOAD: ${{ matrix.payload }}
-#        USERS: ${{ matrix.users }}
-#      with:
-#        host: ${{ steps.vminstance.outputs.ip-address }}
-#        username: ${{ secrets.VM_USER }}
-#        password: ${{ secrets.VM_PWD }}
-#        envs: IP,SCENARIO_NAME,GITHUB_TOKEN,PAYLOAD,USERS
-#        command_timeout: '180m' #3 hours
-#        timeout: 300s #5 mins
-#        script: |
-#          source /etc/profile.d/10-perf-vm.sh
-#          execute-tests.sh -c $IP -s $SCENARIO_NAME -t $GITHUB_TOKEN -p $PAYLOAD -u $USERS
-#    - name: Undeploy Kubernetes artifacts
-#      if: always()
-#      run: |
-#        kubectl delete -f ${TEST_ROOT}/${TEST_NAME}/final.yaml
-#    - name: Cleanup VM
-#      if: always()
-#      continue-on-error: true
-#      uses: azure/CLI@v1
-#      with:
-#        azcliversion: 2.0.72
-#        inlineScript: |
-#          az resource delete --ids $(az resource list --tag benchmark-number=${{ steps.write.outputs.vm-name }} -otable --query "[].id" -otsv)
-#          var=`az disk list --query "[?tags.\"benchmark-number\"=='${{ steps.write.outputs.vm-name }}'].id" -otable -otsv`
-#          if [ -n "$var" ]
-#          then
-#              az resource delete --ids ${var}
-#          else
-#              echo "Disk is already deleted"
-#          fi
-#  cleanup:
-#   needs: build
-#   name: clean up
-#   if: always()
-#   runs-on: ubuntu-latest
+    - name: Execute Tests
+      env:
+        SSH_KEY: ${{secrets.SSH_KEY}}
+      run: |
+        echo "$SSH_KEY" > ballerina-jmeter-vm.pem
+        chmod 400 ballerina-jmeter-vm.pem
+        mkdir -p /home/runner/.ssh
+        INSTANCE_ID="i-0d612d6328f4bbedc"
+        # $(aws ec2 run-instances --image-id ami-055d9171bb70733a3 --count 1 --instance-type c5.xlarge --key-name ballerina-jmeter-vm --security-groups ballerina-jmeter-sg --output text --query 'Instances[*].InstanceId')
+        aws ec2 wait instance-status-ok
+        DNS=$(aws ec2 describe-instances --instance-ids ${INSTANCE_ID} --output text --query 'Reservations[*].Instances[*].PublicDnsName')
+        if [ -z "$(ssh-keygen -F $DNS)" ]; then
+          ssh-keyscan -H $DNS >> ~/.ssh/known_hosts
+        fi
+        ssh -i ballerina-jmeter-vm.pem ubuntu@${DNS} "rm -r ballerina-performance-cloud && source /etc/profile.d/10-perf-vm.sh && execute-tests.sh -c $IP -s $SCENARIO_NAME -p $PAYLOAD -u $USERS"
+
 #   steps:
 #   - name: Cleaning up the cluster
 #     if: always()
