--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -39,17 +39,17 @@ jobs:
       run: |
         eksctl utils write-kubeconfig --cluster="${{ github.event.inputs.clusterName }}"
         # Create a namespace for your ingress resources
-        kubectl create namespace ingress-basic
+        ## kubectl create namespace ingress-basic
 
         # Add the ingress-nginx repository
-        helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+        ##helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
 
         # Use Helm to deploy an NGINX ingress controller
-        helm install nginx-ingress ingress-nginx/ingress-nginx \
-            --namespace ingress-basic \
-            --set controller.replicaCount=2 \
+        ##helm install nginx-ingress ingress-nginx/ingress-nginx \
+          ##  --namespace ingress-basic \
+          ##  --set controller.replicaCount=2 \
         # Wait for ingress ip
-        sleep 60
+        ##sleep 60
     - uses: actions/checkout@v2
     - name: Login to DockerHub
       uses: docker/login-action@v1
