--- a/.github/workflows/ssh_workflow.yml
+++ b/.github/workflows/ssh_workflow.yml
@@ -31,12 +31,15 @@ jobs:
     - name: ssh commands
       uses: appleboy/ssh-action@master
       with:
-        host: ec2-44-242-169-202.us-west-2.compute.amazonaws.com
+        host: "ec2-35-80-15-212.us-west-2.compute.amazonaws.com"
         username: ubuntu
         key: ${{ secrets.SSH_KEY }}
-        port: 22
+        command_timeout: '180m' #3 hours
+        timeout: 300s #5 mins
         script: |
-          whoami
-          ls -al
+          git clone https://github.com/ballerina-platform/ballerina-performance-cloud
+          sudo cp -r ballerina-performance-cloud/base-image /
+          sudo chmod -R 777 /base-image
+          sh /base-image/init.sh
           source /etc/profile.d/10-perf-vm.sh
-          execute-tests.sh -c "34.208.63.195" -s "test_passthrough" -p "50" -u "60"
+          execute-tests.sh -c "35.161.9.222" -s "test_passthrough" -p 50 -u 60
