--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -84,7 +84,17 @@ jobs:
       run: |
         host=`kubectl get svc nginx-ingress-ingress-nginx-controller --namespace ingress-basic -o=go-template --template='{{(index .status.loadBalancer.ingress 0 ).hostname}}'`
         IP=`nslookup $host |  awk '{if (NR==6) {print $2}}'`
-        INSTANCE_ID=$(aws ec2 run-instances --image-id ami-090717c950a5c34d3 --count 1 --instance-type c5.xlarge --key-name ballerina-jmeter-vm --security-groups ballerina-jmeter-sg --output text --query 'Instances[*].InstanceId')
+        user_data_file=$(mktemp /tmp/user-data-XXXX.txt)
+        cat <<EOF >$user_data_file
+        #cloud-config
+        system_info:
+          default_user:
+            name: bal-admin
+        EOF
+        INSTANCE_ID=$(aws ec2 run-instances --user-data file://$user_data_file  --image-id ami-090717c950a5c34d3 --count 1 --instance-type c5.xlarge --key-name ballerina-jmeter-vm --security-groups ballerina-jmeter-sg --output text --query 'Instances[*].InstanceId')
+        while STATE=$(aws ec2 describe-instances --instance-ids $INSTANCE_ID --output text --query 'Reservations[*].Instances[*].State.Name'); test "$STATE" != "running"; do
+            sleep 1;
+        done;
         aws ec2 wait instance-status-ok
         DNS=$(aws ec2 describe-instances --instance-ids ${INSTANCE_ID} --output text --query 'Reservations[*].Instances[*].PublicDnsName')
         echo "Ingress IP: $IP"
@@ -108,7 +118,7 @@ jobs:
         command_timeout: '180m' #3 hours
         timeout: 300s #5 mins
         script: |
-          git clone https://github.com/anuruddhal/ballerina-performance-cloud
+          git clone https://github.com/xlight05/ballerina-performance-cloud
           sudo cp -r ballerina-performance-cloud/base-image /
           sudo chmod -R 777 /base-image
           sh /base-image/init.sh
