Fix cluster name

--- a/.github/workflows/create_cluster.yaml
+++ b/.github/workflows/create_cluster.yaml
@@ -25,5 +25,5 @@ jobs:
         curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
         sudo mv /tmp/eksctl /usr/local/bin
         eksctl create cluster \
-          --name "${{ github.event.inputs.clusterName }}"-"${{ matrix.count }}" \
+          --name "${{ github.event.inputs.clusterName }}" \
           --region us-west-2 \
