--- a/.github/workflows/netty_workflow.yml
+++ b/.github/workflows/netty_workflow.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
         sudo mv /tmp/eksctl /usr/local/bin
-        eksctl utils write-kubeconfig --cluster="${{ github.event.inputs.clusterName }}"-
+        eksctl utils write-kubeconfig --cluster="${{ github.event.inputs.clusterName }}-"
         # Create a namespace for your ingress resources
         kubectl create namespace ingress-basic
 
