--- a/.github/workflows/netty_workflow.yml
+++ b/.github/workflows/netty_workflow.yml
@@ -50,10 +50,10 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-    - name: Docker build
-      run: docker build -t ballerina/${TEST_NAME} ${TEST_ROOT}/${TEST_NAME}
-    - name: Docker push
-      run: docker push ballerina/${TEST_NAME}
+#    - name: Docker build
+#      run: docker build -t ballerina/${TEST_NAME} ${TEST_ROOT}/${TEST_NAME}
+#    - name: Docker push
+#      run: docker push ballerina/${TEST_NAME}
     - name: Deploy artifacts
       run: |
         kubectl apply -f ${TEST_ROOT}/${TEST_NAME}/k8s.yaml
