Move nginx install

--- a/.github/workflows/create_summary_pr.yml
+++ b/.github/workflows/create_summary_pr.yml
@@ -17,3 +17,20 @@ jobs:
         bin/hub pull-request -m '[Automated] Update summary csv files' -b anuruddhal:main
       env:
         GITHUB_TOKEN: ${{ secrets.BALLERINA_BOT_TOKEN }}
+    - name: Deploy Niginx
+      run: |
+        curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
+        sudo mv /tmp/eksctl /usr/local/bin
+        eksctl utils write-kubeconfig --cluster="${{ github.event.inputs.clusterName }}"
+        # Create a namespace for your ingress resources
+        kubectl create namespace ingress-basic
+
+        # Add the ingress-nginx repository
+        helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+
+        # Use Helm to deploy an NGINX ingress controller
+        helm install nginx-ingress ingress-nginx/ingress-nginx \
+            --namespace ingress-basic \
+            --set controller.replicaCount=2 \
+        # Wait for ingress ip
+        sleep 60
