--- a/.github/workflows/netty_workflow.yml
+++ b/.github/workflows/netty_workflow.yml
@@ -4,7 +4,7 @@ on:
     inputs:
       clusterName:
         description: 'Cluster name'
-        default: 'bal-perf-cluster-test'
+        default: 'bal-perf-cluster'
         required: false
 jobs:
   setup:
@@ -28,23 +28,6 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-west-2
-    - name: Deploy Niginx
-      run: |
-        curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
-        sudo mv /tmp/eksctl /usr/local/bin
-        eksctl utils write-kubeconfig --cluster="${{ github.event.inputs.clusterName }}"
-        # Create a namespace for your ingress resources
-        kubectl create namespace ingress-basic
-
-        # Add the ingress-nginx repository
-        helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
-
-        # Use Helm to deploy an NGINX ingress controller
-        helm install nginx-ingress ingress-nginx/ingress-nginx \
-            --namespace ingress-basic \
-            --set controller.replicaCount=2 \
-        # Wait for ingress ip
-        sleep 60
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
