--- a/.github/workflows/netty_workflow.yml
+++ b/.github/workflows/netty_workflow.yml
@@ -39,7 +39,11 @@ jobs:
 #      run: docker push ballerina/${TEST_NAME}
     - name: Deploy artifacts
       run: |
+        curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
+        sudo mv /tmp/eksctl /usr/local/bin
+        eksctl utils write-kubeconfig --cluster="${{ github.event.inputs.clusterName }}"
         kubectl apply -f ${TEST_ROOT}/${TEST_NAME}/k8s.yaml
+
     - name: Write values to outputs
       id: write
       run: |
