--- a/.github/workflows/create_cluster.yaml
+++ b/.github/workflows/create_cluster.yaml
@@ -27,3 +27,15 @@ jobs:
         eksctl create cluster \
           --name "${{ github.event.inputs.clusterName }}" \
           --region us-west-2 \
+
+        eksctl utils write-kubeconfig --cluster="${{ github.event.inputs.clusterName }}"
+        # Create a namespace for your ingress resources
+        kubectl create namespace ingress-basic
+
+        # Add the ingress-nginx repository
+        helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+
+        # Use Helm to deploy an NGINX ingress controller
+        helm install nginx-ingress ingress-nginx/ingress-nginx \
+            --namespace ingress-basic \
+            --set controller.replicaCount=2 \
