--- a/.github/workflows/create_cluster.yaml
+++ b/.github/workflows/create_cluster.yaml
@@ -27,6 +27,9 @@ jobs:
         eksctl create cluster \
           --name "${{ github.event.inputs.clusterName }}" \
           --region us-west-2 \
+          --node-type c6g.2xlarge \
+          --nodes 1 \
+          --tags  "user=anuruddhal@wso2.com"\
 
         eksctl utils write-kubeconfig --cluster="${{ github.event.inputs.clusterName }}"
         # Create a namespace for your ingress resources
